# sponge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  mvp_spec.md
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_p0_schema.py  0002_add_user_feedback.py
backend/app/: config.py  main.py  schemas.py
backend/app/llm/: __init__.py  client.py  pipeline.py  prompts.py  schemas.py
backend/app/models/: __init__.py  tables.py
backend/app/routes/: chat.py  graph.py  nugget.py  onboarding.py  upload.py
backend/app/services/: chunker.py  filestore.py  parser.py
backend/tests/: __init__.py  test_extraction_pipeline.py  test_integration_user_journey.py
docs/: README.md  backlog.md  deploy-env.md  risks.md  schema.md  steel-thread.md  supabase-setup.md  technical-decisions.md
docs/architecture/: kg-expert-perspective.md  schema.md  steel-thread.md  technical-decisions.md
docs/planning/: 90-day-bets-memo.md  backlog.md  engineering-tracker.md  prd-bet-1-steel-thread.md  prd-bet-2-ingestion-engagement.md  prd-bet-3-quality-tuning.md  prd-bet-4-user-validation.md  risks.md  sprint-plan-bet-1.md  sprint-plan-bet-2.md  sprint-plan-bet-3.md  sprint-plan-bet-4.md
docs/setup/: local-dev.md  storage.md
frontend/: .env.example  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  (+1 more)
supabase/: config.toml
supabase/migrations/: 20240130000001_create_enums.sql  20240130000002_create_tables.sql  20240130000003_create_indexes.sql
(+9 files in other folders)
